# NFL-OCCI

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: example_compute_team_occi.py
notebooks/: 01_explore_raw_play_by_play.ipynb  02_feature_sanity_checks.ipynb  03_occi_validation.ipynb
occi/: __init__.py  calculator.py  data_loader.py
src/conflict_map/: __init__.py  cli.py  config.py
src/conflict_map/app/: __init__.py  streamlit_app.py
src/conflict_map/data/: __init__.py  download.py  load.py
src/conflict_map/features/: __init__.py  build_features.py  schema.py
src/conflict_map/metrics/: __init__.py  occi.py
src/conflict_map/model/: __init__.py  conflict_score.py
src/conflict_map/pipeline/: updates.py
src/conflict_map/viz/: __init__.py  field_diagram.py  plots.py
tests/: test_conflict_score.py  test_data_load.py  test_features.py  test_occi.py
webapp/: app.py
webapp/templates/: index.html
