[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "conflict-map-lite"
version = "0.1.0"
description = "Offensive Conflict Creation Index (OCCI) built on public NFL play-by-play data"
authors = [{ name = "OCCI Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "streamlit",
    "requests",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
